design main activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="light_black">#272727</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#ff4646</color>
+    <color name="red">#FF1801</color>
     <color name="red_light">#ff8585</color>
     <color name="light_orange">#ffb396</color>
     <color name="light_beige">#fff5c0</color>
