--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,8 +14,8 @@
 <!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
 <!--    </style>-->
     <style name="Theme.Project" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/red_light</item>
-        <item name="colorPrimaryDark">@color/red_light</item>
-        <item name="colorAccent">@color/red_light</item>
+        <item name="colorPrimary">@color/red</item>
+        <item name="colorPrimaryDark">@color/red</item>
+        <item name="colorAccent">@color/red</item>
     </style>
 </resources>
