design search driver listrview

--- a/app/src/main/res/layout/textviewlayout_driver.xml
+++ b/app/src/main/res/layout/textviewlayout_driver.xml
@@ -8,15 +8,14 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="336dp"
-        android:layout_height="35dp"
+        android:layout_width="280dp"
+        android:layout_height="50dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/text_view_border"
-        android:drawableRight="@drawable/ic_right_arrow"
+        android:background="@color/red"
+        android:drawableRight="@drawable/ic_right_arrow_white"
         android:gravity="center"
         android:paddingRight="15dp"
-        android:text=""
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
