--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".activities.DriverActivity">
 
-
     <View
         android:id="@+id/view_head_main2"
         android:layout_width="411dp"
@@ -45,7 +44,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_search"/>
 
-
     <Button
         android:id="@+id/btnYear"
         style="?android:attr/borderlessButtonStyle"
@@ -72,7 +70,7 @@
         android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextYear"></EditText>
+        app:layout_constraintTop_toBottomOf="@+id/editTextYear"/>
 
     <Button
         android:id="@+id/btnName"
@@ -81,7 +79,7 @@
         android:layout_height="40dp"
         android:layout_marginVertical="30dp"
         android:layout_marginTop="28dp"
-        android:backgroundTint="@color/white"
+        android:background="@color/white"
         android:drawableRight="@drawable/ic_loupe"
         android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,24 +89,26 @@
 
     <ListView
         android:id="@+id/list_InfoCircuits"
-        android:layout_width="389dp"
-        android:layout_height="283dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="320dp"
+        android:layout_height="310dp"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/text_view_border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.827"
+        app:layout_constraintHorizontal_bias="0.525"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextName">
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@+id/editTextName" />
+
     <Button
         android:id="@+id/btnback2"
         android:layout_width="79dp"
         android:layout_height="43dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="@color/red"
-        android:shadowColor="@color/black"
         android:text="Back"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.024"
+        app:layout_constraintHorizontal_bias="0.021"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_InfoCircuits" />
 
