--- a/app/src/main/res/layout/activity_circuit.xml
+++ b/app/src/main/res/layout/activity_circuit.xml
@@ -6,13 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".activities.CircuitActivity">
 
+
+    <View
+        android:id="@+id/view_head_main2"
+        android:layout_width="366dp"
+        android:layout_height="150dp"
+        android:background="@color/red"
+        app:layout_constraintCircleRadius="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/btnback3"
         android:layout_width="79dp"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/red"
-        android:shadowColor="@color/black"
+        android:background="@color/red"
+        android:textColor="@color/white"
         android:text="Back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.018"
@@ -21,9 +33,10 @@
 
     <ListView
         android:id="@+id/list_InfoCircuits"
-        android:layout_width="357dp"
-        android:layout_height="376dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="320dp"
+        android:layout_height="360dp"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/text_view_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextYear4">
@@ -32,44 +45,32 @@
 
     <EditText
         android:id="@+id/editTextYear4"
-        android:layout_width="121dp"
-        android:layout_height="48dp"
-        android:layout_marginVertical="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="156dp"
-        android:autofillHints=""
+        android:layout_width="318dp"
+        android:layout_height="40dp"
+        android:layout_marginVertical="30dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
         android:hint="@string/year"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.128"
-        app:layout_constraintStart_toEndOf="@+id/text_search_Name"
-        app:layout_constraintTop_toBottomOf="@+id/text_search4"></EditText>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_search4"/>
+
 
     <Button
         android:id="@+id/btnYear4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/red"
-        android:shadowColor="@color/black"
-        android:text="@string/search"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="61dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:backgroundTint="@color/white"
+        android:drawableRight="@drawable/ic_loupe"
+        android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextYear"
-        app:layout_constraintTop_toBottomOf="@+id/text_search4" />
-
-    <TextView
-        android:id="@+id/textsearchYear"
-        android:layout_width="91dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="24dp"
-        android:gravity="center"
-        android:text="@string/year2"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintHorizontal_bias="0.929"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editTextYear"
         app:layout_constraintTop_toBottomOf="@+id/text_search4" />
 
     <TextView
@@ -78,7 +79,7 @@
         android:layout_height="57dp"
         android:gravity="center"
         android:text="Search Circuits"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -92,10 +93,11 @@
         android:layout_marginTop="8dp"
         android:text="Circuit Name"
         android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
-        app:layout_constraintHorizontal_bias="0.114"
+        app:layout_constraintHorizontal_bias="0.263"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textsearchYear" />
+        app:layout_constraintTop_toBottomOf="@+id/view_head_main2" />
 
     <TextView
         android:id="@+id/textView4"
@@ -105,17 +107,20 @@
         android:layout_marginEnd="76dp"
         android:text="Location"
         android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/editTextYear4" />
+        app:layout_constraintTop_toBottomOf="@+id/view_head_main2" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="52dp"
         android:text="Country"
         android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnYear4" />
+        app:layout_constraintHorizontal_bias="0.932"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_head_main2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
