--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -8,7 +8,7 @@
 
     <View
         android:id="@+id/view_head_main2"
-        android:layout_width="411dp"
+        android:layout_width="366dp"
         android:layout_height="220dp"
         android:background="@color/red"
         app:layout_constraintCircleRadius="50dp"
@@ -77,13 +77,12 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="61dp"
         android:layout_height="40dp"
-        android:layout_marginVertical="30dp"
-        android:layout_marginTop="28dp"
-        android:background="@color/white"
+        android:layout_marginTop="30dp"
+        android:backgroundTint="@color/white"
         android:drawableRight="@drawable/ic_loupe"
         android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintHorizontal_bias="0.929"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnYear" />
 
