--- a/app/src/main/res/layout/textviewlayout_circuits.xml
+++ b/app/src/main/res/layout/textviewlayout_circuits.xml
@@ -8,13 +8,15 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="319dp"
+        android:layout_width="290dp"
         android:layout_height="55dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/text_view_border"
+        android:background="@color/red"
         android:gravity="center"
         android:text=""
-        android:textColor="@color/black"
+        android:textColor="@color/white"
+        android:drawableRight="@drawable/ic_right_arrow_white"
+        android:paddingRight="20dp"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
