--- a/app/src/main/res/layout/activity_compare.xml
+++ b/app/src/main/res/layout/activity_compare.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".activities.CompareActivity">
 
+    <View
+        android:id="@+id/view_head_main"
+        android:layout_width="364dp"
+        android:layout_height="215dp"
+        android:background="@color/red"
+        app:layout_constraintCircleRadius="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/text_info"
         android:layout_width="240dp"
@@ -13,9 +24,24 @@
         android:layout_marginTop="4dp"
         android:gravity="center"
         android:text="Compare Drivers"
-        android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text_position"
+        android:layout_width="60dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="224dp"
+        android:gravity="center"
+        android:text="Position"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.16"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,111 +49,135 @@
         android:id="@+id/btncompare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="@color/red"
         android:shadowColor="@color/black"
         android:text="Compare"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkbestperf" />
 
-    <EditText
-        android:id="@+id/editTextYear"
-        android:layout_width="106dp"
-        android:layout_height="41dp"
-        android:layout_marginVertical="24dp"
-        android:layout_marginTop="12dp"
-        android:autofillHints=""
-        android:hint="@string/year"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toEndOf="@+id/checkwin"
-        app:layout_constraintTop_toBottomOf="@+id/btnaddcompare"></EditText>
 
-    <CheckBox
-        android:id="@+id/checkwin"
-        android:layout_width="83dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="60dp"
-        android:text="win races"
+    <Button
+        android:id="@+id/btnfilter"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="40dp"
+        android:textColor="@color/white"
+        android:background="@drawable/ic_up_down_arrow"
+        android:foreground="@drawable/text_view_border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.073"
+        app:layout_constraintHorizontal_bias="0.852"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listCompare" />
+        app:layout_constraintTop_toBottomOf="@+id/checkbestperf" />
 
     <Button
         android:id="@+id/btnaddcompare"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="@color/red"
-        android:shadowColor="@color/black"
+        android:textColor="@color/white"
         android:text="Add to compare"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.817"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listCompare" />
 
-    <ListView
-        android:id="@+id/listCompare"
-        android:layout_width="360dp"
-        android:layout_height="175dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/beige"
+    <EditText
+        android:id="@+id/editTextYear"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginVertical="24dp"
+        android:layout_marginTop="24dp"
+        android:autofillHints=""
+        android:background="@color/white"
+        android:hint="@string/year"
+        android:paddingLeft="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.147"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_info" />
 
+    <CheckBox
+        android:id="@+id/checkwin"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="40dp"
+        android:background="@color/white"
+        android:text="Win races"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/editTextYear"
+        app:layout_constraintTop_toBottomOf="@+id/text_info" />
+
+    <ListView
+        android:id="@+id/listCompare"
+        android:layout_width="320dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/text_view_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btncompare" />
+
     <EditText
         android:id="@+id/editTextCircuits"
-        android:layout_width="118dp"
-        android:layout_height="43dp"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
         android:layout_marginVertical="24dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         android:autofillHints=""
+        android:background="@color/white"
         android:hint="Circuit"
+        android:paddingLeft="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
+        app:layout_constraintHorizontal_bias="0.147"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextYear"></EditText>
 
     <Button
         android:id="@+id/btnback"
-        android:layout_width="79dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="81dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="76dp"
         android:backgroundTint="@color/red"
-        android:shadowColor="@color/black"
+        android:textColor="@color/white"
         android:text="Back"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintHorizontal_bias="0.057"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btncompare" />
+        app:layout_constraintTop_toBottomOf="@+id/listCompare" />
 
     <CheckBox
         android:id="@+id/checkbestperf"
-        android:layout_width="88dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="256dp"
-        android:text="best perf"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="40dp"
+        android:background="@color/white"
+        android:text="Best perf"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/editTextCircuits"
         app:layout_constraintTop_toBottomOf="@+id/checkwin" />
 
     <Button
         android:id="@+id/btnreset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_width="88dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/white"
         android:backgroundTint="@color/red"
-        android:shadowColor="@color/black"
         android:text="Reset"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.173"
-        app:layout_constraintStart_toEndOf="@+id/btncompare"
-        app:layout_constraintTop_toBottomOf="@+id/editTextCircuits" />
+        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listCompare" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
