--- a/app/src/main/res/layout/activity_info_circuit.xml
+++ b/app/src/main/res/layout/activity_info_circuit.xml
@@ -6,13 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".activities.InfoCircuitActivity">
 
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="match_parent"
+        android:layout_height="451dp"
+        android:layout_marginTop="32dp"
+        android:background="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textplacecircuit" />
+
     <ListView
         android:id="@+id/list_InfoCircuits"
-        android:layout_width="405dp"
-        android:layout_height="374dp"
-        android:layout_marginTop="116dp"
+        android:layout_width="match_parent"
+        android:layout_height="352dp"
+        android:layout_marginTop="132dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textnamecircuit">
 
@@ -20,14 +29,29 @@
 
     <TextView
         android:id="@+id/textnamecircuit"
-        android:layout_width="379dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="test"
+        android:layout_width="221dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="68dp"
+        android:paddingLeft="20dp"
+        android:text="circuit name"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.084"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textplacecircuit"
+        android:layout_width="221dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="96dp"
+        android:paddingLeft="20dp"
+        android:text="circuit place"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.083"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +59,7 @@
         android:id="@+id/btnback4"
         android:layout_width="79dp"
         android:layout_height="43dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="@color/red"
         android:shadowColor="@color/black"
         android:text="Back"
@@ -46,15 +70,41 @@
 
     <TextView
         android:id="@+id/dateCircuit"
-        android:layout_width="379dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="153dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="244dp"
+        android:layout_marginTop="68dp"
         android:gravity="center"
-        android:text="date"
+        android:text="DD/MM/YYYY"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textnamecircuit" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewFormula1"
+        android:layout_width="382dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="FORMULA 1"
+        android:textSize="30sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewResult"
+        android:layout_width="383dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:text="RESULT OF THE RACE"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
