Buttons do something, but not what I want

--- a/app/src/main/res/layout/activity_info_circuit.xml
+++ b/app/src/main/res/layout/activity_info_circuit.xml
@@ -52,7 +52,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.036"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayoutResultsRace" />
 
     <TextView
         android:id="@+id/dateCircuit"
@@ -114,7 +114,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewResult" />
 
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/frameLayoutResultsRace"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
