--- a/app/src/main/res/layout/activity_circuit.xml
+++ b/app/src/main/res/layout/activity_circuit.xml
@@ -29,10 +29,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.018"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_InfoCircuits" />
+        app:layout_constraintTop_toBottomOf="@+id/list_DriverInfo" />
 
     <ListView
-        android:id="@+id/list_InfoCircuits"
+        android:id="@+id/list_DriverInfo"
         android:layout_width="320dp"
         android:layout_height="360dp"
         android:layout_marginTop="60dp"
