--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnYear" />
 
     <ListView
-        android:id="@+id/list_InfoCircuits"
+        android:id="@+id/list_DriverInfo"
         android:layout_width="320dp"
         android:layout_height="310dp"
         android:layout_marginTop="48dp"
@@ -111,6 +111,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.021"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_InfoCircuits" />
+        app:layout_constraintTop_toBottomOf="@+id/list_DriverInfo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
